Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-8581

Unique prefix for default-tmp-storage-engine does not work

    XMLWordPrintable

Details

    • Bug
    • Status: Closed (View Workflow)
    • Minor
    • Resolution: Fixed
    • 10.1(EOL)
    • 10.1.7
    • OTHER
    • None

    Description

      If I start the server with --default-tmp-storage-engine=MyISAM, it works as expected. If I start it with a unique prefix, e.g. --default-tmp-storage-eng=MyISAM, the server writes the following messages on startup:

      2015-08-07 21:27:55 139794374498144 [Note] Using unique option prefix 'default-tmp-storage-eng' is error-prone and can break in the future. Please use the full name 'default-tmp-storage-engine' instead.
      2015-08-07 21:27:55 139794374498144 [Warning] 'default-tmp-storage-engine' is MySQL 5.6 compatible option. To be implemented in later versions.

      and the variable does not get set:

      MariaDB [test]> select @@default_tmp_storage_engine;
      +------------------------------+
      | @@default_tmp_storage_engine |
      +------------------------------+
      | NULL                         |
      +------------------------------+
      1 row in set (0.01 sec)

      Attachments

        Issue Links

          Activity

            People

              serg Sergei Golubchik
              elenst Elena Stepanova
              Votes:
              0 Vote for this issue
              Watchers:
              1 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 5m
                  5m

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.