MDEV-8581 Unique prefix for default-tmp-storage-engine does not work

remove old "to-be-implemented" definition of
the default-tmp-storage-engine option.